

- storage: ignore setfsuid return value


v0.75 (January 01 2009)
=======================
- added -o option to ssh-{push,pull} to pass extra FUSE options in
- doc: transform to manpages
- packet: I/O retry on short reads


v0.74 (September 07 2008)
=========================
- src: update for libHX 1.25
- added quickstart doc


v0.73 (June 22 2008)
====================
- ccgfs-super: fix child process waiting
- ccgfs-super: switch from HXdeque to HXclist
- ccgfs-storage: fix error message when root_dir not found
- ccgfs-storage: prefix some error messages with the program's name


v0.72 (November 26 2007)
========================
This release fixes non-functional chmod (and read/write request
clamping in v0.71). It adds more command line options to the program
launcher so that it can be used by other projects.

- fchmodat() was incorrectly being passed AT_SYMLINK_NOFOLLOW


v0.71 (November 25 2007)
========================
- Added the -p option (pid file) to ccgfs-super
- Added the -s option to ccgfs-super to enable syslog logging
- Fix high CPU use when no subprocesses are active
- Added "reload" method to init.d script
- Protect positive return values from write() from XL
- Disable read/write request size clamping


v0.69 (October 27 2007)
=======================
pread and pwrite syscalls are now used and large writes greater than
8K are properly handled.

- Use pread()/pwrite()
- Do not translate LOCALFS_STOP
- Truncate large write requests (>8192 bytes)


v0.68 (September 17 2007)
=========================
Unaligned accesses on sparc64 were fixed. Hardlinking always returned
ENOENT. A translation layer was added for open() flags since these
are not architecture-agnostic.

- fix unaligned access (sparc64)
- fixed: start script did not start due to missing path
- open() flags also needed translation
- fixed: hardlink always returned ENOENT
- --enable-workarounds only required for < 2.6.16


v0.67 (August 30 2007)
======================